// common strings without special context
"app_name" = "Delta Chat";
"ok" = "OK";
"cancel" = "Cancel";
"yes" = "Yes";
"no" = "No";
"on" = "On";
"off" = "Off";
"def" = "Default";
"custom" = "Custom";
...
"filter_map_on_time" = "Show locations in time frame";
"show_location_traces" = "Show traces";
"add_poi" = "Send point of interest";


// search
"search" = "Search";
"search_explain" = "Search for chats, contacts, and messages";
"search_no_result_for_x" = "No results found for \\\"%s\\\"";


// create/edit groups, contact/group profile
"group_name" = "Group name";
...
"notify_name_only" = "Name only";
"notify_no_name_or_message" = "No name or message";


// permissions
"perm_required_title" = "Permission required";
"perm_continue" = "Continue";
"perm_not_now" = "Not now";
"perm_explain_need_for_camera_access" = "To capture photos and video, allow Delta Chat access to the camera.";
"perm_explain_need_for_mic_access" = "To send audio messages, allow Delta Chat access to your microphone.";
"perm_explain_need_for_storage_access" = "Delta Chat needs access to your files in order to export files or to create backups.";
"perm_explain_need_for_storage_access_share" = "Delta Chat needs access to your files in order to share the selected files.";
"perm_explain_access_to_camera_denied" = "Delta Chat requires the Camera permission in order to take photos or videos, but it has been permanently denied. Please continue to the app settings menu, select \\\"Permissions\\\", and enable \\\"Camera\\\".";
...
"global_menu_file_quit_desktop" = "Quit";
"global_menu_edit_desktop" = "Edit";
"global_menu_edit_undo_desktop" = "Undo";
"global_menu_edit_redo_desktop" = "Redo";
"global_menu_edit_cut_desktop" = "Cut";
"global_menu_edit_copy_desktop" = "Copy";
"global_menu_edit_paste_desktop" = "Paste";
"global_menu_edit_delete_desktop" = "Delete";
"global_menu_edit_selectall_desktop" = "Select All";
"global_menu_view_desktop" = "View";
"global_menu_view_floatontop_desktop" = "Float on Top";
"global_menu_view_developer_desktop" = "Developer";
"global_menu_view_developer_tools_desktop" = "Developer Tools";
...
